fix slogan button overlap issue

--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@
 }
 
 .Next {
-  bottom: 20px;
+  bottom: 10px;
   position: fixed;
   background-color: #282c34;
   display: flex;
@@ -58,7 +58,7 @@
   font-size: 4rem;
   color: white;
   border-radius: 20px;
-  padding: 16px;
+  padding: 2px 35px;
 }
 
 .ModeBox {
